BFF Invoice, InvoiceITem, Person, PaymentMethod (#5)
* added POST for address

* remove token

* address PATCH

* Address DELETE, GET{id}, GET

* BFF Person, Person Unit Test

* BFF Invoice, InvoiceITem, Person, PaymentMethod

---------
